--- a/Autobus/App.config
+++ b/Autobus/App.config
@@ -1,6 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Autobus.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+    <userSettings>
+        <Autobus.Properties.Settings>
+            <setting name="ResimEn" serializeAs="String">
+                <value>120</value>
+            </setting>
+            <setting name="ResimBoy" serializeAs="String">
+                <value>160</value>
+            </setting>
+        </Autobus.Properties.Settings>
+    </userSettings>
 </configuration>
