Add project files.

--- a/Autobus/Autobus.csproj
+++ b/Autobus/Autobus.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Converter\FilePathMergeConverter.cs" />
     <Compile Include="Converter\KoltukNoDisabledConverter.cs" />
     <Compile Include="Converter\KoltukNoMüşteriConverter.cs" />
+    <Compile Include="Converter\NumberToSplitterVisibilityConverter.cs" />
     <Compile Include="Converter\SeferSüreGeçtiConverter.cs" />
     <Compile Include="Model\Sipariş.cs" />
     <Compile Include="Model\Ürün.cs" />
