Add project files.

--- a/Autobus/App.config
+++ b/Autobus/App.config
@@ -16,6 +16,9 @@
             <setting name="ResimBoy" serializeAs="String">
                 <value>160</value>
             </setting>
+            <setting name="OrtalamaHız" serializeAs="String">
+                <value>80</value>
+            </setting>
         </Autobus.Properties.Settings>
     </userSettings>
 </configuration>
