Add project files.

--- a/Autobus/App.config
+++ b/Autobus/App.config
@@ -19,6 +19,12 @@
             <setting name="OrtalamaHız" serializeAs="String">
                 <value>80</value>
             </setting>
+            <setting name="EkranSeç" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="VarsayılanEkran" serializeAs="String">
+                <value>0</value>
+            </setting>
         </Autobus.Properties.Settings>
     </userSettings>
 </configuration>
