--- a/Autobus/Properties/Settings.settings
+++ b/Autobus/Properties/Settings.settings
@@ -11,5 +11,11 @@
     <Setting Name="OrtalamaHız" Type="System.Double" Scope="User">
       <Value Profile="(Default)">80</Value>
     </Setting>
+    <Setting Name="EkranSeç" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="VarsayılanEkran" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
