Add project files.

--- a/Autobus/App.config
+++ b/Autobus/App.config
@@ -25,6 +25,12 @@
             <setting name="VarsayılanEkran" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="SüresiGeçenSeferleriGizle" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="AnimasyonTipi" serializeAs="String">
+                <value>0</value>
+            </setting>
         </Autobus.Properties.Settings>
     </userSettings>
 </configuration>
