--- a/Autobus/Properties/Settings.settings
+++ b/Autobus/Properties/Settings.settings
@@ -17,5 +17,11 @@
     <Setting Name="VarsayılanEkran" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="SüresiGeçenSeferleriGizle" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="AnimasyonTipi" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
