Add project files.

--- a/Autobus/App.config
+++ b/Autobus/App.config
@@ -31,6 +31,9 @@
             <setting name="AnimasyonTipi" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="TümSeferlerResimGöster" serializeAs="String">
+                <value>False</value>
+            </setting>
         </Autobus.Properties.Settings>
     </userSettings>
 </configuration>
