--- a/Autobus/Properties/Settings.settings
+++ b/Autobus/Properties/Settings.settings
@@ -23,5 +23,8 @@
     <Setting Name="AnimasyonTipi" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="TümSeferlerResimGöster" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
