--- a/Autobus/Autobus.csproj
+++ b/Autobus/Autobus.csproj
@@ -91,6 +91,7 @@
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\RippleEffect.cs" />
     <Compile Include="ViewModel\SeferGirişViewModel.cs" />
+    <Compile Include="ViewModel\ShadowedImage.cs" />
     <Compile Include="ViewModel\TümSeferlerViewModel.cs" />
     <Compile Include="ViewModel\YolcuDüzenViewModel.cs" />
     <Compile Include="ViewModel\YolcuGirişViewModel.cs" />
