Add project files.

--- a/Autobus/App.config
+++ b/Autobus/App.config
@@ -34,6 +34,12 @@
             <setting name="TümSeferlerResimGöster" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="WebpEncode" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="WebpQuality" serializeAs="String">
+                <value>50</value>
+            </setting>
         </Autobus.Properties.Settings>
     </userSettings>
 </configuration>
