--- a/Autobus/Properties/Settings.settings
+++ b/Autobus/Properties/Settings.settings
@@ -26,5 +26,11 @@
     <Setting Name="TümSeferlerResimGöster" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="WebpEncode" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="WebpQuality" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">50</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
