--- a/Autobus/Autobus.csproj
+++ b/Autobus/Autobus.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Windows.Controls.Ribbon" />
     <Reference Include="System.Xml" />
@@ -97,6 +98,7 @@
     <Compile Include="ViewModel\ShadowedImage.cs" />
     <Compile Include="Model\Tahsilat.cs" />
     <Compile Include="ViewModel\TümSeferlerViewModel.cs" />
+    <Compile Include="ViewModel\WebPWrapper.cs" />
     <Compile Include="ViewModel\YolcuDüzenViewModel.cs" />
     <Compile Include="ViewModel\YolcuGirişViewModel.cs" />
     <Compile Include="ViewModel\ÖdemeYapılmayanKoltuklarViewModel.cs" />
