Add project files.

--- a/Extensions/Extensions.csproj
+++ b/Extensions/Extensions.csproj
@@ -84,7 +84,6 @@
     <Compile Include="Controls\ContentToggleButton.cs" />
     <Compile Include="Converters\FilePathToFileDescriptionConverter.cs" />
     <Compile Include="Converters\FilePathToIconConverter.cs" />
-    <Compile Include="Controls\HorizontalListBox.cs" />
     <Compile Include="Controls\MaskedTextBox.cs" />
     <Compile Include="Converters\NullableToBooleanConverter.cs" />
     <Compile Include="Controls\NumericUpDownControl.cs" />
@@ -116,6 +115,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Themes\Generic.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Themes\Skin.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
